--- a/src/index.scss
+++ b/src/index.scss
@@ -5,3 +5,9 @@ div {
 body {
     color: red;
 }
+
+.test {
+    height: 100vh;
+    width: 100vw;
+    background: url('./assets/img/settings.png');
+}
