--- a/src/views/index.html
+++ b/src/views/index.html
@@ -14,6 +14,7 @@
             <section>
                 <img src="<%= require('../assets/img/cat.jpeg') %>" width="500px" height="auto" alt="cat" />
                 <div class="test"></div>
+                <h1>HOI</h1>
             </section>
         </div>
     </main>
