Adjusted remove plugin

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -15,6 +15,7 @@
                 <img src="<%= require('../assets/img/cat.jpeg') %>" width="500px" height="auto" alt="cat" />
                 <div class="test"></div>
                 <h1>HOI</h1>
+                <p>fbehfbenfjenjfe</p>
             </section>
         </div>
     </main>
